--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="最美田黄石,完白山人田黄龙章,完白山人,田黄石">
+        <meta name="baidu-site-verification" content="code-YvdhLxLwO5" />
 		<title>最美田黄石·完白山人田黄龙章</title>
 		<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
 		<link rel="stylesheet" href="css/style.css" />
