--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="main-mod main-mod-2"> 
 						<div class="con">
 							<div class="item item-l clearfix">
-								<div class="img"><a href="#"><img src="images/img02.png"></a></div>
+								<div class="img"><a href="#"><img src="images/img02.jpeg"></a></div>
 								<div class="img-txt">
 									<div class="txt-inner">
 										<h3><a href="#">【完白山人田黄龙章】</a></h3>
@@ -66,7 +66,7 @@
 							<ul class="clearfix">
 								<li>
 									<dl>
-										<dd class="img"><img src="images/img21.png"></dd>
+										<dd class="img"><img src="images/img21.jpeg"></dd>
 										<dt>乾隆宸翰</dt>
 										<dd class="txt">
 											邓石如，即著名的“完白山人”。邓原名琰，字顽伯，号完白山人、完白、故浣子、游笈道人、凤水渔长、龙山樵长，清代集书法家、篆刻家、画家、文字学家于一生的艺术大师和学者，安徽怀宁（今安徽安庆）人。邓少时家贫，9岁时读过1年书，停学后采樵、卖饼饵糊口。后又靠写字、刻印谋生，十分勤奋向学。后研习碑拓，苦练隶书等书体，终于成为有清一代杰出的书法家和篆刻家。
@@ -75,7 +75,7 @@
 								</li>
 								<li>
 									<dl>
-										<dd class="img"><img src="images/img22.png"></dd>
+										<dd class="img"><img src="images/img22.jpeg"></dd>
 										<dt>御赏 如是观</dt>
 										<dd class="txt">
 											这件田黄龙玺不仅体量硕大，方章成材，兼且质地温润凝腻，萝卜丝纹清晰，而其浓郁的色泽，隐隐有皇家之气。构思与工艺之精奇令人赞叹。正方印章巨大的体量，尚佳的质色，精美的雕工，无一不是世所罕见，而这些特质完美的融于一石，更见难得，即便称为“当代寿山石第一玺”也不为过。
@@ -84,7 +84,7 @@
 								</li>
 								<li>
 									<dl>
-										<dd class="img"><img src="images/img23.png"></dd>
+										<dd class="img"><img src="images/img23.jpeg"></dd>
 										<dt>维精维一</dt>
 										<dd class="txt">
 											而此对印装裹，则全是清宫内府的手工，且保存十分完好。大印立摆于红木几上敷黄色双包绸衬湖蓝匣座之上，其上再覆以厚锦匣盖，匣外表包衬明黄色四季花卉暗花绸，内通体包裹双衬软卧囊，匣盖、底合上以后，印章在内可以纹丝不动，同时由于是软卧囊，即防冲撞，也不会磨损印石。外面再衬以红木提梁立插盖的定制木盒，这是清宫内府最考究的做法。无论是印石雕工、装潢用料，可以说这是清内府制作的标准器。
@@ -94,7 +94,7 @@
 								</li>
 								<li>
 									<dl>
-										<dd class="img"><img src="images/img24.png"></dd>
+										<dd class="img"><img src="images/img24.jpeg"></dd>
 										<dt>寓意于物</dt>
 										<dd class="txt">
 											希望对藏友有所帮助或者引起你的一些小兴趣。少走弯路，关于民间藏品的出手想必藏友们都会有疑问和顾虑，但是还是要尊重藏品的客观事实，实事求是，以诚相待，讲实情，出实招，办实事，求实效。收而不研者俗，藏而不鉴者傻，以藏学师者德，以藏悟心者美，以藏缘友者雅，以藏养藏者。
@@ -110,7 +110,7 @@
 						</div>
 						<div class="con">
 							<dl class="clearfix">
-								<dd class="img fl"><img src="images/img25.jpg"></dd>
+								<dd class="img fl"><img src="images/img25.jpeg"></dd>
 								<dd class="txt">
 									完白山人田黄龙章，通透洁晶，田黄中的精品，其规格分别为11*10.9重1817.2克，边款刻有《维精维一》《乾隆宸翰》《天子古稀》《寓意于物》《御赏 如是观》底印更是拍案叫绝题词《上善若水。水善利万物而不争，处众人之所恶，故几于道。居，善地；心，善渊；与，善仁；言，善信；政，善治；事，善能；动，善时。夫唯不争，故无尤。》价值连城，莫可估量。
 								</dd>	
